--- a/src/blog/templates/blog/post-detail.html
+++ b/src/blog/templates/blog/post-detail.html
@@ -14,7 +14,7 @@
 {% if comment_form.errors %}
   <div id="alert">
     <h2>Saving the comment failed!</h2>
-    <p>Please check the comment form below the post and fix your erros.</p>
+    <p>Please check the comment form below the post and fix your errors.</p>
     <a href="#comment-form">Fix!</a>
   </div>
 {% endif %}
